# glm

./: CHANGELOG.md  glm.cabal
src/Statistics/Models/Linear/Generalized/: Fit.hs  Types.hs
test/: Binomial.hs  Main.hs
